--- a/src/jupyter/notebook.ipynb
+++ b/src/jupyter/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "a7887708",
    "metadata": {},
    "outputs": [
@@ -21,8 +21,10 @@
    ],
    "source": [
     "import os\n",
+    "import sys\n",
     "import warnings\n",
     "import pandas as pd\n",
+    "\n",
     "from pandas.core.common import SettingWithCopyWarning\n",
     "warnings.simplefilter(action=\"ignore\", category=SettingWithCopyWarning)\n",
     "\n",
@@ -31,402 +33,40 @@
     "\n",
     "pd.set_option(\"display.max_rows\", 2000)\n",
     "\n",
-    "import sys\n",
     "sys.path.append(\"../\") # add parent dir to path\n",
     "\n",
     "from common.constants import *\n",
-    "from app.data_loader import load_catted_trans"
+    "from transaction_data_tools.plugins import chase_plugin\n",
+    "from transaction_data_tools.plugins import amazon_plugin"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "43cae0c4",
+   "execution_count": 5,
+   "id": "26d91f4e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "downloads = os.listdir(\"/Users/caleb.crouse/downloads/\")"
+    "    assert path.exists(PATH_TO_CHASE)\n",
+    "\n",
+    "    df = pd.read_csv(PATH_TO_CHASE)\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "00ff35bc",
+   "execution_count": 6,
+   "id": "e91c4a43",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['EP attack diagram.jpg',\n",
-       " 'download (1).png',\n",
-       " 'md_7_msp_70_msl_25.png',\n",
-       " 'eclipse-java-mars-1-macosx-cocoa-x86_64.tar.gz',\n",
-       " 'Install Spotify 2.app',\n",
-       " 'periodic_beaconing_http.yml',\n",
-       " 'EP attack diagram.png',\n",
-       " 'Runs Test for Randomness.pdf',\n",
-       " 'IMG-2722.JPG',\n",
-       " 'intro-to-pcap-public-release.pptx',\n",
-       " 'ad.pdf',\n",
-       " 'CAIM',\n",
-       " 'HttpBeaconValidator (7).pdf',\n",
-       " 'jitter.csv',\n",
-       " 'mactex-20180417.pkg',\n",
-       " 'IMG-2904.JPG',\n",
-       " '02 Feb 19 WeeklyV1.docx',\n",
-       " 'HttpBeaconValidator (12).pdf',\n",
-       " 'jsbach_chorals_harmony',\n",
-       " 'SecureMessage (1).pdf',\n",
-       " 'isaac_anthony_resume.pdf',\n",
-       " 'JingyaoLiu_RADAR2009_ANewPulseDeinterleavingAlgorithmBasedonMultipleHypothesisTracking.pdf',\n",
-       " 'rules_export (1).ndjson',\n",
-       " '38047873_268369597277921_3455172353498021888_n.mp4',\n",
-       " 'KristofLadnyResume.pdf',\n",
-       " 'dev-schedule - dev_schedule.csv',\n",
-       " 'ad (1).pdf',\n",
-       " '5409A614-F757-4AC6-9711-E37161E754AD.MP4',\n",
-       " '09-015.pdf',\n",
-       " '4.-Jupiter-1 (1).mp3',\n",
-       " 'Alert Creator Tech Framework (1).xml',\n",
-       " 'Jupiter-Alto-Sax-1 (1).pdf',\n",
-       " 'ShowBillImage (4).pdf',\n",
-       " 'Elevano-SrDataScientist-ScottSwensen.pdf',\n",
-       " 'Quantum 1on1 Quick Reference Guide (1).pdf',\n",
-       " 'MASTER ONE-ON-ONE AGENDA DONT EDIT.docx',\n",
-       " 'siddhi-gpl-execution-streamingml-2.0.0.jar',\n",
-       " '09 Jun 18 WeeklyV1.docx',\n",
-       " 'paystatements.pdf',\n",
-       " 'video-game-sales-xgboost.ipynb',\n",
-       " 'RStudio-1.1.453.dmg',\n",
-       " 'caleb_kafka_consumer (2).ipynb',\n",
-       " 'lecture6 (4).ppt',\n",
-       " 'ADinf.c',\n",
-       " 'jre-8u171-macosx-x64.dmg',\n",
-       " 'R-3.5.0.pkg',\n",
-       " 'Caleb Crouse Resume Jan 2021.pdf',\n",
-       " '08 Dec 18 Weekly V1.docx',\n",
-       " 'DirectLetter.pdf',\n",
-       " 'rva-vm-cyberanalytics-02.ironnet.io_03413c142a9d4978a177c64d0088bfaa.parquet (1).snappy',\n",
-       " 'Soundflower-2-0b2.dmg',\n",
-       " 'Caleb Crouse Resume Jan 2021 (1).pdf',\n",
-       " 'generated_cron_s12_fe_http_2_artifacts (2).zip',\n",
-       " 'Event Entity Standardization.docx',\n",
-       " 'download.png',\n",
-       " '.DS_Store',\n",
-       " 'Miniconda3-4.6.14-MacOSX-x86_64.sh',\n",
-       " 'Health_Savings_Account_Verification_Form_03042019.pdf',\n",
-       " 'ShowBillImage (5).pdf',\n",
-       " 'main.pdf',\n",
-       " 'Alert Creator Tech Framework.drawio',\n",
-       " 'LogitsandtigersandbearsohmyAbrieflookatthesimplemathoflogisticregressionandhowitcanimprovedisseminationofresults..pdf',\n",
-       " 'Zoom (1).pkg',\n",
-       " 'MASTER LEASE - PH^LLLLN701 -  Oct2020_encrypted_ (1).pdf',\n",
-       " 'calebchristian.docx',\n",
-       " 'results 3',\n",
-       " 'Resume Fall 2018.docx',\n",
-       " 'Event Dedup Example - Sheet1.csv',\n",
-       " 'correlation_view.pptx',\n",
-       " '2.1.ipynb',\n",
-       " 'clustering_ndss.pdf',\n",
-       " 'IMG-2135.JPG',\n",
-       " 'rank_version_von_neumann_test.pdf',\n",
-       " 'Automatic_feature_selection_for_anomaly_detection.pdf',\n",
-       " 'gof_for_geometric_distribution.pdf',\n",
-       " 'HttpBeaconValidator (13).pdf',\n",
-       " 'ep_SFD_beaconing_scenario.html',\n",
-       " 'MASTER_LEASE_PH_LLLLN701_Oct2020.pdf',\n",
-       " 'HttpBeaconValidator (6).pdf',\n",
-       " 'results 2',\n",
-       " '_F4A7212b.jpg',\n",
-       " 'ADinf.c.zip',\n",
-       " 'theme-2075.xml',\n",
-       " '.localized',\n",
-       " 'Caleb Crouse Resume Jan 2021.docx',\n",
-       " 'Untitled document.pdf',\n",
-       " 'Chase7973_Activity_20210809.CSV',\n",
-       " 'rand1.pdf',\n",
-       " 'MASTER LEASE - PH^LLLLN701 -  Oct2020.pdf',\n",
-       " 'IMG-2861.JPG',\n",
-       " 'eclipse-inst-jre-mac64.dmg',\n",
-       " 'Caleb.p12',\n",
-       " 'IMG-1722 (1).JPG',\n",
-       " 'jdk-10.0.1_osx-x64_bin.dmg',\n",
-       " '16594-75959-1-PB.pdf',\n",
-       " 'reuters21578.tar.gz',\n",
-       " 'Caleb (1).txt',\n",
-       " 'MASTER LEASE - PH^LLLLN701 -  Oct2020_encrypted_.pdf',\n",
-       " 'Runs Test for Randomness (1).pdf',\n",
-       " 'HUNT-428 Info.xlsx',\n",
-       " 'Analytic Entity Descriptions.xlsx',\n",
-       " 'Uniform-IEEE-1987.pdf',\n",
-       " 'lecture6.ppt',\n",
-       " 'kolmo (1).pdf',\n",
-       " 'ShowBillImage (2).pdf',\n",
-       " 'rules_export (2).ndjson',\n",
-       " 'ComparisonsoftheGoodnessofFitTestsfortheGeometricDistribution.pdf',\n",
-       " 'ideaIC-2020.1.1.dmg',\n",
-       " 'Proposed 3.jpg',\n",
-       " 'jitter (1).csv',\n",
-       " 'Dome Analytics_Enrichments-Page-2.png',\n",
-       " 'Resume2021S.pdf',\n",
-       " 'theme-30564.xml',\n",
-       " 'HttpBeaconValidator (18).pdf',\n",
-       " 'Jupiter-Alto-Sax-1.pdf',\n",
-       " '_F4A7210.jpg',\n",
-       " 'jspi.pdf',\n",
-       " '47-55-1-PB.pdf',\n",
-       " 'md_8.png',\n",
-       " 'Logistic+Regression+with+a+Neural+Network+mindset+v5.ipynb',\n",
-       " 'lecture6 (3).ppt',\n",
-       " 'Lecture13_NonParametricStatistics.ppt',\n",
-       " '1-s2.0-S111001681630059X-main.pdf',\n",
-       " '_F4A6130.png',\n",
-       " 'SFD_beaconing_scenario.zip',\n",
-       " '794d02174df00a76b50953626f7b934f69e1.pdf',\n",
-       " 'datascience.pem',\n",
-       " 'collecting_rsi_info.ipynb',\n",
-       " 'PolarPlunge_AfterGroup_1.png',\n",
-       " 'VSCode-darwin-stable.zip',\n",
-       " 'beaconer.linux.amd64',\n",
-       " 'Aaron Graham  and 378 others.vcf',\n",
-       " 'HttpBeaconValidator (1).pdf',\n",
-       " 'Caleb Crouse Resume Jan 2021 (1) (3).pdf',\n",
-       " 'SFD_beaconing_scenario',\n",
-       " 'Polygraph- Automatically Generating Signatures for Polymorphic Worms.pdf',\n",
-       " 'HttpBeaconValidator (14).pdf',\n",
-       " 'Caleb Crouse Ironnet.p12',\n",
-       " 'Comparing anomaly detection techniques for HTTP.pdf',\n",
-       " 'Wireshark 3.0.2 Intel 64.dmg',\n",
-       " '-.txt',\n",
-       " 'au_lab.zip',\n",
-       " 'HttpBeaconValidator (15).pdf',\n",
-       " '210123NHamlettDataScienceFed.pdf',\n",
-       " 'ideaIC-2021.1.2.dmg',\n",
-       " 'Caleb Crouse Resume Jan 2021 (1) (2).pdf',\n",
-       " 'ep_cobalt.tgz',\n",
-       " '08.19 IronNet Cybersecurity Mutual of Omaha Benefit Summaries.pdf',\n",
-       " 'xaa',\n",
-       " 'ideaIC-2020.3.4.dmg',\n",
-       " 'SpotifyInstaller.zip',\n",
-       " 'AnApproachforMalwareBehaviorIdentificationandClassification.pdf',\n",
-       " 'SecureMessage.pdf',\n",
-       " 'EN_EnrollmentsSummary_2019_12_13_124335.pdf',\n",
-       " 'diagram_2.JPG',\n",
-       " 'selected_data_1.json',\n",
-       " 'mean_sev_over_strata.png',\n",
-       " 'lecture6 (2).ppt',\n",
-       " 'ideaIC-2021.1.1.dmg',\n",
-       " '98292.jpg',\n",
-       " 'rules_export (3).ndjson',\n",
-       " '10795-29868-3-PB.pdf',\n",
-       " 'Anomaly-based intrusion detection in software as a service.pdf',\n",
-       " 'discrete_uniform_tests_gof.pdf',\n",
-       " 'Chase7973_Activity_20200714.CSV',\n",
-       " 'Mars-Alto-Sax-1.pdf',\n",
-       " 'codebeautify (2).c',\n",
-       " 'eventLogs-spark-application-1616702748477-with-checkpoint.zip',\n",
-       " 'ShowBillImage (3).pdf',\n",
-       " 'A_comprehensive_survey_on_network_anomaly_detection_LINK.pdf',\n",
-       " 'TrendData6-01--7-13.csv',\n",
-       " 'visualizing label decisions.zip',\n",
-       " '008af3aed2193cae5f4fa8a467f4f27c8057.pdf',\n",
-       " 'data_analytics_2018_5_30_60121.pdf',\n",
-       " 'diagram_1.JPG',\n",
-       " 'SKM_C45818101615100.pdf',\n",
-       " 'Resume_MichaelLowney_GetHired (1).pdf',\n",
-       " 'Miniconda3-latest-MacOSX-x86_64hey.sh',\n",
-       " '2019_TaxReturn.pdf',\n",
-       " 'SFD_beaconing_scenario.ipynb',\n",
-       " 'reference.json',\n",
-       " 'fe_cerebro_scenarios.htm',\n",
-       " 'lecture6 (1).ppt',\n",
-       " 'Alert Creator Tech Framework (2).drawio',\n",
-       " 'visualizing label decisions',\n",
-       " 'Install Spotify.app',\n",
-       " 'md_10.png',\n",
-       " 'Untitled spreadsheet.xlsx',\n",
-       " 'Chase7973_Activity_20200309.CSV',\n",
-       " 'EP attack diagram (1).png',\n",
-       " 'kolmo.pdf',\n",
-       " 'Caleb Crouse Resume Jan 2021 (1).docx',\n",
-       " '4.-Jupiter-1.mp3',\n",
-       " 'out.csv',\n",
-       " 'ADinf 2.c',\n",
-       " 'IronNet Corporate OKRs.pdf',\n",
-       " 'bny_raw_parquet.txt',\n",
-       " 'nbh_SFD_beaconing_scenario.html',\n",
-       " 'results',\n",
-       " 'Access to Care - Cigna .pdf',\n",
-       " 'covidia_1.05_updated.xlsx',\n",
-       " 'Network_traffic_classifier_with_convolutional_and_.pdf',\n",
-       " '3710 N Rosser St # 204 - 3710 N Rosser St # 204 -.pdf',\n",
-       " 'theme-66.epf',\n",
-       " 'rules_export.ndjson',\n",
-       " 'Anagram_A_Content_Anomaly_Detector_Resistant_to_Mi.pdf',\n",
-       " 'VEGdVMnCe73PITdwtQLQ1543525472.pdf',\n",
-       " '25859790 (1).pdf',\n",
-       " 'HttpBeaconValidator (16).pdf',\n",
-       " 'AlAhmadi+and+Martinovic,+MalClassifier+-+Malware+family+classification+using+network+flow+sequence+behaviour.pdf',\n",
-       " 'file_cabinet_ironnet__files',\n",
-       " 'Caleb Crouse Resume Jan 2021 (1) (1).pdf',\n",
-       " 'HttpBeaconValidator (3).pdf',\n",
-       " 'Certs (3) (1).zip',\n",
-       " 'codebeautify (1).c',\n",
-       " 'Certs',\n",
-       " 'KDD95-044.pdf',\n",
-       " 'Product Structure.jpeg',\n",
-       " 'analytic_provided_context_values_analysis.html',\n",
-       " 'Runs Test for Randomness (4).pdf',\n",
-       " 'JASA1982RankvonNeumann.pdf',\n",
-       " 'Runs Test for Randomness (5).pdf',\n",
-       " 'BotMiner_Clustering_Analysis_of_Network_Traffic_fo.pdf',\n",
-       " 'md_6.png',\n",
-       " 'report.txt',\n",
-       " 'captures___10___generated___3.3.2___parquet___httpprotocol___year=2018___month=4___day=4___hour=18___.rva-vm-cyberanalytics-02.ironnet.io_59d33ff1541546d5a87a32f6cf141312.parquet.snappy.crc',\n",
-       " '021420 Big Band Rehearsal d2.mp3',\n",
-       " 'ShowBillImage.pdf',\n",
-       " 'toward_supervised_anomoly_detection.pdf',\n",
-       " '01 Jun 19 Weekly V1.docx',\n",
-       " '533111.jpg',\n",
-       " 'HttpBeaconValidator (2).pdf',\n",
-       " 'IMG-1722.JPG',\n",
-       " 'Event Database and Schema Discussion.pdf',\n",
-       " 'caleb_kafka_consumer.ipynb',\n",
-       " 'HttpBeaconValidator.pdf',\n",
-       " 'US9948671.pdf',\n",
-       " 'HttpBeaconValidator (17).pdf',\n",
-       " 'multi_event_type_alert.png',\n",
-       " 'reuters21578',\n",
-       " '3710 N Rosser St # 204 - 3710 N Rosser St # 204 - (1).pdf',\n",
-       " 'download_novel_traffic_relationship.html',\n",
-       " 'SM_80.pdf',\n",
-       " 'Alert Creator Tech Framework Parquet.drawio',\n",
-       " 'caleb_kafka_consumer (1).ipynb',\n",
-       " 'Caleb.txt',\n",
-       " 'visualize_cc_channels.htm',\n",
-       " 'md_5.png',\n",
-       " 'Zoom.pkg',\n",
-       " 'kolmo (2).pdf',\n",
-       " 'Miniconda3-latest-MacOSX-x86_64.sh',\n",
-       " 'ShowBillImage (1).pdf',\n",
-       " 'codebeautify.c',\n",
-       " 'jitter (2).csv',\n",
-       " 'Caleb Crouse Ironnetcyber.p12',\n",
-       " 'Image-classification-transfer-learning.ipynb',\n",
-       " 'thinkorswim_installer.dmg',\n",
-       " 'survey_of_outlier_detection_methods.pdf',\n",
-       " 'file_cabinet_ironnet_.htm',\n",
-       " 'lect5.ppt',\n",
-       " 'md_4.png',\n",
-       " 'SpotifyInstaller (1).zip',\n",
-       " 'Chase7973_Activity_20200309 (1).CSV',\n",
-       " '-.rs',\n",
-       " 'ideaIC-2019.3.5.dmg',\n",
-       " 'E101.D_2017EDP7294.pdf',\n",
-       " 'isaac_anthony_resume (1).pdf',\n",
-       " 'TIPro_WT_setup_4.2.0.exe',\n",
-       " 'HttpBeaconValidator (10).pdf',\n",
-       " 'Untitled spreadsheet.xlsx.cpgz',\n",
-       " 'IMG-2717.JPG',\n",
-       " 'Untitled Diagram.drawio',\n",
-       " 'LogExpfunctions.doc',\n",
-       " 'untitled.png',\n",
-       " 'HttpBeaconValidator (5).pdf',\n",
-       " 'AutoIDCard.pdf',\n",
-       " 'transactions.csv',\n",
-       " 'multi_event_type_alert (1).png',\n",
-       " 'IMG-2861 (1).JPG',\n",
-       " '23 Feb 19 Weekly V1.docx',\n",
-       " 'Network_Traffic_Anomaly_Detection_Using_Recurrent_.pdf',\n",
-       " 'RyanDorris.pdf',\n",
-       " 'Runs Test for Randomness (2).pdf',\n",
-       " 'generated_cron_s12_fe_http_2_artifacts.zip',\n",
-       " 'R-4.0.0.pkg',\n",
-       " 'Data_Alogarithms.pptx',\n",
-       " 'eclipse-inst-mac64 (1).dmg',\n",
-       " 'Domain First Conclusions and Results.docx',\n",
-       " 'Chase7973_Activity_20190715.CSV',\n",
-       " 'rva-vm-cyberanalytics-02.ironnet.io_03413c142a9d4978a177c64d0088bfaa.parquet.snappy',\n",
-       " '2019 Annual Review Process FINAL (1).pdf',\n",
-       " 'generated_cron_s12_fe_http_2_artifacts (1).zip',\n",
-       " 'Aflac Interest Sheet (1).docx',\n",
-       " 'Dome Analytics_Enrichments.png',\n",
-       " 'HttpBeaconValidator (9).pdf',\n",
-       " 'EP_attack_alert_logic_analysis.html.zip',\n",
-       " 'Alert Creator Tech Framework (1).drawio',\n",
-       " 'audacity-macosx-ub-2.1.0.dmg',\n",
-       " 'Proposed Product Structure No Groups.jpeg',\n",
-       " 'Alert Creator Tech Framework Postgres.drawio',\n",
-       " 'IMG-1963.JPG',\n",
-       " 'beaconSamples.tgz',\n",
-       " 'ShowBillImage (6).pdf',\n",
-       " 'Thank You Follow Up - Caleb Crouse.docx',\n",
-       " '1-s2.0-S0167404818305546-main.pdf',\n",
-       " 'consistent_beaconing_http.yml',\n",
-       " 'generated.html',\n",
-       " 'Zoom (2).pkg',\n",
-       " 'github-recovery-codes.txt',\n",
-       " 'Malware Originated HTTP Traffic Detection Utilizing Cluster Appearance Ratio.pdf',\n",
-       " 'Proposed Product Structure.jpeg',\n",
-       " 'MASTER LEASE - PH^LLLLN701 -  Oct2020_encrypted_ (2).pdf',\n",
-       " 'alert_filters.png',\n",
-       " '25859790.pdf',\n",
-       " 'xab',\n",
-       " 'python-3.6.8-macosx10.9.pkg',\n",
-       " 'minimal-landscape-wallpaper.jpg',\n",
-       " 'Zoom (3).pkg',\n",
-       " 'correlation_view.pptx.cpgz',\n",
-       " 'jsbach_chorals_harmony.zip',\n",
-       " 'CAIM.zip',\n",
-       " 'ideaIU-2020.1.1.dmg',\n",
-       " 'HttpBeaconValidator (8).pdf',\n",
-       " '1.-Mars-1.mp3',\n",
-       " 'IMG-2710.JPG',\n",
-       " '16 June 2018 Weekly V1.docx',\n",
-       " 'index.doc',\n",
-       " 'eclipse-inst-mac64.dmg',\n",
-       " 'caleb_crouse.crt',\n",
-       " '9783790821208-c1.pdf',\n",
-       " 'Garc-a_et_al-2014-Security_and_Communication_Networks.pdf',\n",
-       " 'workshopbook2018.pdf',\n",
-       " 'Runs Test for Randomness (3).pdf',\n",
-       " 'lect5 (1).ppt',\n",
-       " 'flink-1.11.2-bin-scala_2.12.tgz',\n",
-       " 'lowCoiComms.csv',\n",
-       " '81a0db06-97b5-42ae-b79d-980c7a9cc91f.csv',\n",
-       " 'payStatement.pdf',\n",
-       " 'fe_cerebro_scenarios_files',\n",
-       " 'xac',\n",
-       " 'image.png',\n",
-       " '26 Jan 19 WeeklyV!.docx',\n",
-       " '01-Jan-2020_to_26-Jul-2021.csv',\n",
-       " '2 Jun 18 Weekly V1.docx',\n",
-       " 'HttpBeaconValidator (4).pdf',\n",
-       " 'Completed - ADP Employee Direct Deposit Enrollment Form with Percentages.pdf',\n",
-       " 'Anaconda3-2019.03-MacOSX-x86_64.pkg',\n",
-       " 'IMG-2713.JPG',\n",
-       " 'chi-sq_explanation.doc',\n",
-       " 'MADE-cybersecurity-model.pdf',\n",
-       " 'Aaron Graham .vcf',\n",
-       " 'HttpBeaconValidator (11).pdf',\n",
-       " 'Untitled presentation.png',\n",
-       " 'Alert Creator Tech Framework.xml',\n",
-       " 'SecureMessage (2).pdf']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "downloads"
+    "chase"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "7c305b95",
+   "id": "305eb3f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "36ed42dc",
+   "id": "804da12b",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "bd35fcaa",
+   "id": "28962d68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "4cb5ac97",
+   "id": "9461e159",
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e753dc65",
+   "id": "00976b62",
    "metadata": {},
    "outputs": [
     {
